jsons fixed for works view

--- a/public/index.html
+++ b/public/index.html
@@ -25,19 +25,19 @@
 		<meta property="og:description" content="{finsweet - Building stellar websites for early startups">
 		<meta property="og:site_name" content="{finsweet">
 		<meta property="og:url" content="https://avlakh.github.io/beetroot_project/index.html" />
-		<meta property="og:image" content="https://avlakh.github.io/beetroot_project/...finish SEO..." />
+		<meta property="og:image" content="https://avlakh.github.io/beetroot_project/favicon.ico" />
 		<!-- Twitter TODO -->
 		<meta name="twitter:title" content="{finsweet">
     	<meta name="twitter:description" content="{finsweet - Building stellar websites for early startups">
-    	<meta name="twitter:image" content="https://avlakh.github.io/beetroot_project/...finish SEO...">
+    	<meta name="twitter:image" content="https://avlakh.github.io/beetroot_project/favicon.ico">
 		<!-- Schema.org -->
 		<script type="application/ld+json">
 			{
 			  "@context": "http://schema.org",
 			  "@type": "Organization",
 			  "name": "Bhromaon",
-			  "url": "https://avlakh.github.io/beetroot_project/...finish SEO...",
-			  "logo": "https://avlakh.github.io/beetroot_project/...finish SEO...",
+			  "url": "https://avlakh.github.io/beetroot_project/favicon.ico",
+			  "logo": "https://avlakh.github.io/beetroot_project/favicon.ico",
 			  "contactPoint": [{
 				"@type": "ContactPoint",
 				"telephone": "(888) 888-88-88",
