faqs responsive improved

--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,14 @@
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
-		<!-- OpenGraph TODO -->
+		<!-- OpenGraph -->
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="{finsweet" />
 		<meta property="og:description" content="{finsweet - Building stellar websites for early startups">
 		<meta property="og:site_name" content="{finsweet">
 		<meta property="og:url" content="https://avlakh.github.io/beetroot_project/index.html" />
 		<meta property="og:image" content="https://avlakh.github.io/beetroot_project/favicon.ico" />
-		<!-- Twitter TODO -->
+		<!-- Twitter -->
 		<meta name="twitter:title" content="{finsweet">
     	<meta name="twitter:description" content="{finsweet - Building stellar websites for early startups">
     	<meta name="twitter:image" content="https://avlakh.github.io/beetroot_project/favicon.ico">
@@ -36,7 +36,7 @@
 			  "@context": "http://schema.org",
 			  "@type": "Organization",
 			  "name": "Bhromaon",
-			  "url": "https://avlakh.github.io/beetroot_project/favicon.ico",
+			  "url": "https://avlakh.github.io/beetroot_project/index.html",
 			  "logo": "https://avlakh.github.io/beetroot_project/favicon.ico",
 			  "contactPoint": [{
 				"@type": "ContactPoint",
