--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
 		<meta name="robots" content="all" />
     	<meta name="revisit-after" content="1 days" />
 		<!-- Favicon -->
-		<link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
-		<link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
-		<link rel="mask-icon" href="<%= BASE_URL %>safari-pinned-tab.svg" color="#5bbad5">
-		<link rel="icon" href="<%= BASE_URL %>favicon.ico">
+		<link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon/favicon-16x16.png">
+		<link rel="manifest" href="<%= BASE_URL %>favicon/site.webmanifest">
+		<link rel="mask-icon" href="<%= BASE_URL %>favicon/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="icon" href="<%= BASE_URL %>favicon/favicon.ico">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
 		<!-- OpenGraph -->
@@ -25,27 +25,11 @@
 		<meta property="og:description" content="{finsweet - Building stellar websites for early startups">
 		<meta property="og:site_name" content="{finsweet">
 		<meta property="og:url" content="https://avlakh.github.io/beetroot_project/index.html" />
-		<meta property="og:image" content="https://avlakh.github.io/beetroot_project/favicon.ico" />
+		<meta property="og:image" content="https://avlakh.github.io/beetroot_project/images/home/main_logo.svg" />
 		<!-- Twitter -->
 		<meta name="twitter:title" content="{finsweet">
     	<meta name="twitter:description" content="{finsweet - Building stellar websites for early startups">
-    	<meta name="twitter:image" content="https://avlakh.github.io/beetroot_project/favicon.ico">
-		<!-- Schema.org -->
-		<script type="application/ld+json">
-			{
-			  "@context": "http://schema.org",
-			  "@type": "Organization",
-			  "name": "Bhromaon",
-			  "url": "https://avlakh.github.io/beetroot_project/index.html",
-			  "logo": "https://avlakh.github.io/beetroot_project/favicon.ico",
-			  "contactPoint": [{
-				"@type": "ContactPoint",
-				"telephone": "(888) 888-88-88",
-				"contactType": "Customer service",
-				"areaServed": "EN"
-			  }]
-			}
-		</script>
+    	<meta name="twitter:image" content="https://avlakh.github.io/beetroot_project/images/home/main_logo.svg">
   	</head>
 	<body>
 		<noscript>
